fix: on mobile wrap full width underneath sidebar and content

--- a/lambdas/page-deploy-site/src/templates/page-standard/page-standard.css
+++ b/lambdas/page-deploy-site/src/templates/page-standard/page-standard.css
@@ -31,6 +31,20 @@ body {
   }
 }
 
+@media screen and (min-width: 550px) and (max-width: 1051px) {
+  #sidebar2 {
+    flex: 1;
+
+    .sidebar {
+      width: 100%;
+    }
+
+    .sidebar .promoCardCardGrid {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+}
+
 .content > section {
   flex-grow: 1;
 }
